--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@iconify/svelte": "^5.0.1",
     "@internationalized/date": "^3.8.2",
     "@lucide/svelte": "^0.515.0",
-    "@tanstack/table-core": "^8.21.3",
+    "@sveltejs/adapter-vercel": "^5.10.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
+    "@tanstack/table-core": "^8.21.3",
     "bits-ui": "^2.9.2",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
